src/test/ui/error-codes/E0191.rs
trait Trait {
    type Bar;
}

type Foo = Trait; //~ ERROR E0191

fn main() {}
